[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scott.tscn" type="PackedScene" id=1]
[ext_resource path="res://Backgrounds/exterior.png" type="Texture" id=2]
[ext_resource path="res://World.gd" type="Script" id=3]
[ext_resource path="res://Tree.tscn" type="PackedScene" id=4]
[ext_resource path="res://Bush.tscn" type="PackedScene" id=5]
[ext_resource path="res://DogHouse.tscn" type="PackedScene" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 597.909, 39.3763 )

[node name="World" type="Node"]
script = ExtResource( 3 )

[node name="ExteriorLevel" type="Node2D" parent="."]

[node name="Background" type="Sprite" parent="ExteriorLevel"]
texture = ExtResource( 2 )
centered = false

[node name="Area2D" type="Area2D" parent="ExteriorLevel"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ExteriorLevel/Area2D"]
position = Vector2( 590.646, 171.543 )
shape = SubResource( 1 )

[node name="YSort" type="YSort" parent="ExteriorLevel"]

[node name="Scott" parent="ExteriorLevel/YSort" instance=ExtResource( 1 )]
position = Vector2( 1100, 194.028 )
scale = Vector2( 0.8, 0.8 )

[node name="Tree" parent="ExteriorLevel/YSort" instance=ExtResource( 4 )]
position = Vector2( 1069.22, 155.55 )

[node name="DogHouse" parent="ExteriorLevel/YSort" instance=ExtResource( 6 )]
position = Vector2( 443.351, 159.296 )

[node name="Bush" parent="ExteriorLevel/YSort" instance=ExtResource( 5 )]
position = Vector2( 562.291, 158.109 )

[node name="Bush3" parent="ExteriorLevel/YSort" instance=ExtResource( 5 )]
position = Vector2( 60.99, 156.522 )

[node name="Bush2" parent="ExteriorLevel/YSort" instance=ExtResource( 5 )]
position = Vector2( 840.608, 159.523 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 1120, 120 )
scale = Vector2( 0.8, 0.8 )
current = true
[connection signal="input_event" from="ExteriorLevel/Area2D" to="." method="_on_Area2D_input_event"]
[connection signal="mouse_entered" from="ExteriorLevel/Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="ExteriorLevel/Area2D" to="." method="_on_Area2D_mouse_exited"]
